cleanup up tests

--- a/vite/index.html
+++ b/vite/index.html
@@ -9,11 +9,7 @@
 </head>
 
 <body>
-  <div id="app">
-    <template>
-      <p>fdsafdsa</p>
-    </template>
-  </div>
+  <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
