--- a/vite/index.html
+++ b/vite/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <p>This file is required so Vite finds all the scripts it must compile.</p>
+
   <script type="module" src="/src/main.js"></script>
 </body>
 
