--- a/vite/index.html
+++ b/vite/index.html
@@ -11,7 +11,12 @@
 <body>
   <p>This file is required so Vite finds all the scripts it must compile.</p>
 
-  <script type="module" src="/src/main.js"></script>
+  <p>The goal is this file to NOT be required anymore, and that http://localhost:3000 actually load from your custom host. See README.</p>
+  <br>
+
+  <p>If you are visiting this page it means you'll want to access your local host, in my case <a href="http://vite-php-setup.test">http://vite-php-setup.test</a></p>
+
+  <script type="module" src="/src/index.js"></script>
 </body>
 
 </html>
